# akbench

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  arguments.h  bandwidth.cc  build.sh  fifo_benchmark.cc  fifo_benchmark.h  gloo_benchmark.py  gloo_benchmark.sh  memcpy_benchmark.cc  memcpy_benchmark.h  memcpy_mt_benchmark.cc  memcpy_mt_benchmark.h  mmap_benchmark.cc  mmap_benchmark.h  mpi_bandwidth.cc  mq_benchmark.cc  openmpi_pingpong.cc  pipe_benchmark.cc  pipe_benchmark.h  shm_benchmark.cc  shm_benchmark.h  tcp_benchmark.cc  tcp_benchmark.h  uds_benchmark.cc  uds_benchmark.h
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/akbench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
akbench/: CMakeLists.txt  akbench.cc  akbench_json_test.sh  aklog.cc  aklog.h  aklog_test.cc  atomic_latency.cc  atomic_latency.h  atomic_latency_test.cc  atomic_rel_acq_latency.cc  atomic_rel_acq_latency.h  atomic_rel_acq_latency_test.cc  bandwidth.cc  barrier.cc  barrier_latency.cc  barrier_latency.h  barrier_latency_test.cc  barrier_test.cc  common.cc  common.h  condition_variable_latency.cc  condition_variable_latency.h  condition_variable_latency_test.cc  fifo_bandwidth.cc  fifo_bandwidth.h  fifo_bandwidth_test.cc  getopt_utils.h  latency.cc  memcpy_bandwidth.cc  memcpy_bandwidth.h  memcpy_bandwidth_test.cc  memcpy_mt_bandwidth.cc  memcpy_mt_bandwidth.h  memcpy_mt_bandwidth_test.cc  mmap_bandwidth.cc  mmap_bandwidth.h  mmap_bandwidth_test.cc  mpi_bandwidth.cc  mq_bandwidth.cc  mq_bandwidth.h  (+19 more)
benchmark_comparison/: .gitignore  README.md  gloo_benchmark.py  run_lmbench.py  run_lmbench.sh  setup_lmbench.sh
ipc-bench/: CMakeLists.txt  atomic_benchmark.cc  atomic_benchmark.h  atomic_latency.cc  atomic_latency.h  bandwidth.cc  barrier_latency.cc  barrier_latency.h  common.cc  common.h  condition_variable_benchmark.cc  condition_variable_latency.cc  condition_variable_latency.h  fifo_bandwidth.cc  fifo_bandwidth.h  fifo_benchmark.cc  latency.cc  memcpy_bandwidth.cc  memcpy_bandwidth.h  memcpy_mt_bandwidth.cc  memcpy_mt_bandwidth.h  mmap_bandwidth.cc  mq_bandwidth.cc  mq_bandwidth.h  pipe_bandwidth.cc  pipe_bandwidth.h  pipe_benchmark.cc  semaphore_latency.cc  semaphore_latency.h  shm_bandwidth.cc  shm_benchmark.cc  syscall_latency.cc  syscall_latency.h  tcp_bandwidth.cc  uds_bandwidth.cc  uds_bandwidth.h
results/: LAPTOP-7LEF3C0M.json  README.md  akishika.json  ao.json  masumi.json  misen.json
scripts/: build.sh  format.sh  generate_graphs.py  generate_graphs.sh  gloo_benchmark.py
